# brisca-rs

./: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs
client/: Cargo.toml
client/src/: api.rs  game_event_stream.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
