[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = {path = "../api" }
bytes = "1.6.0"
eventsource-stream = "0.2.3"
iced = { version = "0.12.1", features = ["image", "tokio"] }
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"


